calendar only shows uncomplted tasks

--- a/templates/add-task.html
+++ b/templates/add-task.html
@@ -7,6 +7,8 @@
     {{ form.author }}
     <p></p>
     {{ form.description }}
+    <p></p>
+    {{ form.start_time }}
     {% csrf_token %}
     <p></p>
     <input class="btn btn-success" type="submit" value="Submit">
