--- a/templates/base.html
+++ b/templates/base.html
@@ -28,6 +28,9 @@
                 <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="{% url 'completed_tasks' %}">Completed Tasks</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="{% url 'calendar' %}">Calendar</a>
+                </li>
             </ul>
         </div>
     </div>
